#98 develop: fix styles on small resolution

--- a/src/models/modal.css
+++ b/src/models/modal.css
@@ -31,8 +31,9 @@
     text-align: center;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    height: 90%;
 }
 
 .modal-wrapper__setPlayers .modal-footer {
@@ -138,4 +139,14 @@
 }
 .radio_buttons input[type="radio"]:checked ~ * {
     background:pink !important;
+}
+
+@media screen and (max-width: 470px){
+    .modal-wrapper__setPlayers {
+        width: 100%;
+        left: 0;
+        top:0;
+        max-height: 100vh;
+        height: 100%;
+    }
 }
